# diamond

ml/: .gitignore  main.py  pyproject.toml
ml/config/: config.yaml
ml/src/dataset/: data_manager.py  schema.py
ml/src/jobs/: predict.py  register.py  retrieve.py  train.py
ml/src/models/: base_model.py  light_gbm_regression.py  models.py  preprocess.py
